<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_la_maison_bluetooth"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_server_client"
        android:layout_below="@id/titleTextView"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/serverButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_server"
        android:layout_below="@id/descriptionTextView"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/clientButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_client"
        android:layout_below="@id/serverButton"
        android:layout_marginTop="10dp"/>
</RelativeLayout>
